# vrl-lsp

./: .gitignore  .vscodeignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vrl-lsp-0.0.1.vsix
client/: package-lock.json  package.json
client/src/: extension.ts
src/: main.rs
tests/: sample.vrl
